# phymes

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.cache/hf/models--Alibaba-NLP--gte-Qwen2-1.5B-instruct/: config.json  tokenizer_config.json
.cache/hf/models--HuggingFaceTB--SmolLM2-135M-Instruct/: tokenizer_config.json
.cache/hf/models--Qwen--Qwen2-0.5B-Instruct/: tokenizer_config.json
.cache/hf/models--sentence-transformers--all-MiniLM-L6-v2/: tokenizer_config.json
.cargo/: config.toml
.github/: dependabot.yml  release.yml
.github/actions/cuda-build-env/: action.yaml
.github/actions/hf-model-cache/: action.yaml
.github/actions/rust-build-env/: action.yaml
.github/actions/wasmtime-cache/: action.yaml
.github/workflows/: README.md  audit.yml  docs.yml  phymes-agents.yml  phymes-app.yml  phymes-book.yml  phymes-core.yml  phymes-server.yml  phymes.yml  release.yml  take.yml
.github/workflows-no-run/: README.md  docs.yml  phymes-agents.yml  phymes-app.yml  phymes-core.yml  phymes-server.yml
phymes-agents/: Cargo.toml  README.md
phymes-agents/examples/cache/: main.rs  run_main.rs
phymes-agents/examples/chat/: run_main.rs
phymes-agents/examples/chatagent/: main.rs  run_main.rs
phymes-agents/src/: lib.rs
phymes-agents/src/candle_assets/: candle_asset.rs  candle_inference.rs  candle_which.rs  device.rs  mod.rs  token_output_stream.rs
phymes-agents/src/candle_chat/: chat_config.rs  chat_processor.rs  message_aggregator_processor.rs  message_history.rs  message_parser_processor.rs  mod.rs  tool_parser.rs
phymes-agents/src/candle_embed/: embed_config.rs  embed_document.rs  embed_inference.rs  embed_processor.rs  mod.rs
phymes-agents/src/candle_models/: mod.rs  nomic.rs  quantized_bert.rs  quantized_nomic.rs  quantized_qwen2.rs
phymes-agents/src/candle_ops/: mod.rs  ops_config.rs  ops_functions.rs  ops_processor.rs  ops_service.rs  ops_which.rs  summary_config.rs  summary_processor.rs
phymes-agents/src/openai_asset/: chat_processor.rs  embed_processor.rs  mod.rs  openai_which.rs
phymes-agents/src/session_plans/: agent_session_builder.rs  available_session_plans.rs  chat_agent_session.rs  document_rag_session.rs  mod.rs  tool_agent_session.rs
phymes-app/: Cargo.toml  Dioxus.toml  README.md  index.html
phymes-app/assets/: main.css
phymes-app/src/: main.rs
phymes-app/src/ui/: backend.rs  main_window.rs  message_state.rs  messaging_interface.rs  messaging_state.rs  metrics_interface.rs  metrics_state.rs  mod.rs  settings_interface.rs  settings_state.rs  sign_in_interface.rs  sign_in_state.rs  subjects_interface.rs  subjects_state.rs  svg_icons.rs  tasks_interface.rs  tasks_state.rs
phymes-book/: book.toml
phymes-book/src/: README.md  SUMMARY.md
phymes-book/src/getting-started/: README.md  deploying.md  developing.md  installation.md
phymes-book/src/phymes-agents/: README.md  chat_agent.md  model_assets.md  rag_agent.md  tool_agent.md
phymes-book/src/phymes-app/: README.md  ui.md
phymes-book/src/phymes-core/: README.md  agentic_ai.md  algorithm.md  glossary.md  simulator.md  sssp.md  tutorial.md
phymes-book/src/phymes-server/: README.md  tutorial.md
phymes-core/: Cargo.toml  README.md
phymes-core/examples/addrows/: main.rs
phymes-core/src/: lib.rs
phymes-core/src/metrics/: baseline.rs  builder.rs  common.rs  instant.rs  mod.rs  value.rs
phymes-core/src/session/: common_traits.rs  mod.rs  runtime_env.rs  session_context.rs  session_context_builder.rs
phymes-core/src/table/: arrow_script.rs  arrow_table.rs  arrow_table_publish.rs  arrow_table_subscribe.rs  mod.rs  stream.rs  stream_adapter.rs
phymes-core/src/task/: arrow_aggregator.rs  arrow_message.rs  arrow_processor.rs  arrow_task.rs  coalesce.rs  limit.rs  mod.rs  test_exec.rs
phymes-server/: Cargo.toml  README.md
phymes-server/src/: main.rs
phymes-server/src/handlers/: json_error.rs  mod.rs  session_info.rs  session_state.rs  session_stream.rs  sign_in.rs
phymes-server/src/server/: mod.rs  server_app.rs  server_config.rs  server_state.rs  serverless_app.rs  serverless_config.rs
