[package]
name = "phymes-server"
version = "0.1.0"
edition = "2024"
authors = ["Douglas McCloskey"]
description = "The server for PHYMES"
license = "MIT and Apache-2.0"

[features]
default = ["wsl", "candle"]
wasip2 =  ["phymes-core/wasip2", "phymes-agents/wasip2",
    # WASM compatible tokio features
    "tokio/sync", "tokio/macros", "tokio/io-util", "tokio/rt", "tokio/time",
    # Axum serverless extras
    "dep:futures-executor", "dep:tower-service"]
std = [
    "tokio/full", "dep:reqwest",
    # Axum defaults
    "axum/form", "axum/http1", "axum/json", "axum/matched-path", "axum/original-uri",
    "axum/query", "axum/tokio", "axum/tower-log", "axum/tracing",
    # Axum-extra defaults
    "axum-extra/tracing",
    "dep:tower-http",
    "tower-http/fs",
    "tower-http/trace",
    "tower-http/cors",
    "tracing-subscriber/env-filter",
    ]
wsl = ["std", "phymes-core/wsl", "phymes-agents/wsl", "dep:tempfile"]
wsl-gpu = ["std", "phymes-core/wsl-gpu", "phymes-agents/wsl-gpu"]
candle = ["phymes-agents/candle"] # force use of candle models when openai_api is available

[dependencies]
tokio = { version = "1.45.1", default-features = false, optional = true }
axum = { version = "0.8.1", default-features = false, features = ["json", "macros"] }
axum-extra = { version = "0.10.0", default-features = false, features = ["typed-header"] }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
anyhow = "1.0.95"
bytes = "1.10.0"
tower-http = { version = "0.6.2", default-features = false, optional = true }
tower-service = { version = "0.3.3", optional = true }
clap = {version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_path_to_error = "0.1.17"
jsonwebtoken = { version = "9.3.1" }
reqwest = { version = "0.12.22", features = ["json", "stream"], default-features = false, optional = true }
bcrypt = { version = "0.17.0", default-features = false, features = ["alloc"]}
chrono = { version = "0.4.41", features = ["wasmbind"] }
phymes-core = { path = "../phymes-core", default-features = false}
phymes-agents = { path = "../phymes-agents", default-features = false }
parking_lot = "0.12.3"
http = { version = "1.3.1"}
futures-executor = { version = "0.3.21", optional = true }
base64 = { version = "0.22.1" }
tempfile = { version = "3.20.0", optional = true }